// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders green cards 1`] = `
<body>
  <div>
    <div>
      <nav
        class="navbar navbar-expand navbar-light bg-light"
      >
        <span
          class="navbar-brand"
        >
          Welcome! Your workshop code is: 
          <span
            style="color: blue;"
          >
            empty-workshop-code
          </span>
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="justify-content-end navbar-collapse collapse"
        >
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-primary"
              data-testid="leaveWorkshop"
              type="button"
            >
              Close Workshop
            </button>
          </span>
        </div>
      </nav>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="text-center mb-5 mt-5 col"
          >
            <div
              class="spinner-border text-danger"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
            <p>
              Waiting for Red cards
            </p>
          </div>
        </div>
        <div
          class="mt-2 border row"
        />
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-success"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Green Mark
                    </h2>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div>
                    <div
                      class="mt-2 card bg-warning"
                    >
                      <div
                        class="card-body"
                      >
                        <div
                          class="card-title h5"
                          style="margin-top: .75rem;"
                        >
                          <button
                            class="float-right btn-light btn btn-primary"
                            type="button"
                          >
                            Delete
                          </button>
                          <h2>
                            Yellow Mark
                          </h2>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-success"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Green Jeff
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders red cards 1`] = `
<body>
  <div>
    <div>
      <nav
        class="navbar navbar-expand navbar-light bg-light"
      >
        <span
          class="navbar-brand"
        >
          Welcome! Your workshop code is: 
          <span
            style="color: blue;"
          >
            empty-workshop-code
          </span>
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="justify-content-end navbar-collapse collapse"
        >
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-primary"
              data-testid="leaveWorkshop"
              type="button"
            >
              Close Workshop
            </button>
          </span>
        </div>
      </nav>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-danger"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Mark
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-danger"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Mary
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-danger"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Sam
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-danger"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Jane
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-2 border row"
        />
        <div
          class="row"
        >
          <div
            class="mt-3 text-center mt-5 col"
          >
            <div
              class="spinner-border text-success"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
            <p>
              Waiting for Green cards
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders the Host component 1`] = `
<body>
  <div>
    <div>
      <nav
        class="navbar navbar-expand navbar-light bg-light"
      >
        <span
          class="navbar-brand"
        >
          Welcome! Your workshop code is: 
          <span
            style="color: blue;"
          >
            empty-workshop-code
          </span>
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="justify-content-end navbar-collapse collapse"
        >
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-primary"
              data-testid="leaveWorkshop"
              type="button"
            >
              Close Workshop
            </button>
          </span>
        </div>
      </nav>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="text-center mb-5 mt-5 col"
          >
            <div
              class="spinner-border text-danger"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
            <p>
              Waiting for Red cards
            </p>
          </div>
        </div>
        <div
          class="mt-2 border row"
        />
        <div
          class="row"
        >
          <div
            class="mt-3 text-center mt-5 col"
          >
            <div
              class="spinner-border text-success"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
            <p>
              Waiting for Green cards
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders yellow cards 1`] = `
<body>
  <div>
    <div>
      <nav
        class="navbar navbar-expand navbar-light bg-light"
      >
        <span
          class="navbar-brand"
        >
          Welcome! Your workshop code is: 
          <span
            style="color: blue;"
          >
            empty-workshop-code
          </span>
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="justify-content-end navbar-collapse collapse"
        >
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-primary"
              data-testid="leaveWorkshop"
              type="button"
            >
              Close Workshop
            </button>
          </span>
        </div>
      </nav>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="text-center mb-5 mt-5 col"
          >
            <div
              class="spinner-border text-danger"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
            <p>
              Waiting for Red cards
            </p>
          </div>
        </div>
        <div
          class="mt-2 border row"
        />
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-success"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Green Mark
                    </h2>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div>
                    <div
                      class="mt-2 card bg-warning"
                    >
                      <div
                        class="card-body"
                      >
                        <div
                          class="card-title h5"
                          style="margin-top: .75rem;"
                        >
                          <button
                            class="float-right btn-light btn btn-primary"
                            type="button"
                          >
                            Delete
                          </button>
                          <h2>
                            Yellow Mark
                          </h2>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div>
                    <div
                      class="mt-2 card bg-warning"
                    >
                      <div
                        class="card-body"
                      >
                        <div
                          class="card-title h5"
                          style="margin-top: .75rem;"
                        >
                          <button
                            class="float-right btn-light btn btn-primary"
                            type="button"
                          >
                            Delete
                          </button>
                          <h2>
                            Yello Jeff
                          </h2>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div>
              <div
                class="mt-2 card bg-success"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                    style="margin-top: .75rem;"
                  >
                    <button
                      class="float-right btn-light btn btn-primary"
                      type="button"
                    >
                      Delete
                    </button>
                    <h2>
                      Green Jeff
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
